add optional ORCID to creators and contributors

--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -49,7 +49,7 @@
   <div class="col-sm-9 monograph-metadata">
     <h1 id="work-title"><%= @presenter.title %></h1>
     <% if @presenter.authors? %>
-        <span aria-label="authors" class="authors"><%= render_markdown @presenter.authors %></span>
+        <span aria-label="authors" class="authors"><%= render_markdown @presenter.authors(contributors: true, orcids: true) %></span>
     <% end %>
     <% if @presenter.date_created.present? %>
       <span aria-label="publication date"><%= @presenter.date_created.first %></span><% if @presenter.edition_name.present? %><span aria-label="edition name"><%= sanitize @presenter.edition_name %></span><% end %>
@@ -66,13 +66,13 @@
     <% end %>
     <% if @presenter.funder_display? %>
       <span aria-label="funder display" class="funder_display"><i><%= @presenter.funder_display %></i></span>
-    <% end %>    
+    <% end %>
     <!-- ACCESS INDICATORS and OPTIONS -->
     <%= render partial: 'access_options.html.erb', locals: { auth: @auth, presenter: @presenter } if @auth.present? %>
     <!-- BOOK DESCRIPTION -->
     <div class="description<%= " display-in-full" if %w[mw22v7671 8623j115w].include? @presenter.id %>">
       <%= render_markdown @presenter.description.first || '' %>
-    </div>    
+    </div>
     <%# ensure all of the toolbar's internal components' conditionals are present here to control the toolbar's appearance %>
     <% if @presenter.reader_ebook? || (@ebook_download_presenter.downloadable_ebooks? && !@presenter.tombstone?) || @presenter.buy_url? %>
         <div class="btn-toolbar" role="toolbar">
