--- a/app/views/hyrax/file_sets/_side_by_side_layout.html.erb
+++ b/app/views/hyrax/file_sets/_side_by_side_layout.html.erb
@@ -5,8 +5,9 @@
           <h1 id="asset-title"><%= @presenter.title %></h1>
           <div class="skip"><a href="#media" data-turbolinks="false">Skip to media</a></div>
           <span class="section">From <em><%= link_to @presenter.parent.title, main_app.monograph_catalog_path(@presenter.monograph_id) %></em>
-            <% if @presenter.parent.authors? %>
-              by <%= render_markdown @presenter.parent.authors %>
+            <% authorship_display = @presenter.parent.authors %>
+            <% if authorship_display.present? %>
+              by <%= render_markdown authorship_display %>
             <% end %>
           </span>
           <br />
