HELIO-4131 Remove TOC Chapter Read Button

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -875,6 +875,7 @@ footer.press {
       border-top: none;
       a.toc-link {
         max-width: 80%;
+        text-decoration: underline;   
       }
     }
 
