--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -25,17 +25,10 @@
         <span><%= interval.title %></span>
       <% else %>
         <a class="toc-link" href="<%= epub_path(id: ebook_presenter.id) + '#' + interval.cfi  %>" data-turbolinks="false"><%= interval.title %></a>
-        <%# The Read button never appears by itself, it exists to somewhat encourage reading over downloading. %>
         <% if interval.downloadable? && permit_download_buttons %>
-          <div class="btn-group download" role="group" aria-label="Read or Download Section">
+          <div class="btn-group download" role="group" aria-label="Download Section">
             <a class="btn btn-default btn-sm toc-download-link" href="<%= epub_download_interval_path(id: ebook_presenter.id, title: interval.title, chapter_index: index) %>" data-turbolinks="false">
             <i id="download" class="oi" data-glyph="data-transfer-download" title="Download section" aria-hidden="true"></i> Download</a>
-            <% if @presenter.epub? %>
-              <a class="btn btn-default btn-sm toc-link" href="<%= epub_path(id: ebook_presenter.id, anchor: interval.cfi + "/4/1:0") %>">
-            <% else %>
-              <a class="btn btn-default btn-sm toc-link" href="<%= epub_path(id: ebook_presenter.id) + '#' + interval.cfi %>" data-turbolinks="false">
-            <% end %>
-              <span class="glyphicon glyphicon-book" title="Read section" aria-hidden="true"></span> Read</a>
           </div>
         <% end %>
       <% end %>
