--- a/app/views/e_pubs/_webgl_specific.js.erb
+++ b/app/views/e_pubs/_webgl_specific.js.erb
@@ -57,7 +57,7 @@ var open_panel = function() {
           '<h2>'+$3d_title+'</h2>' +
           '<p><strong>'+$3d_doi+'</strong></p>' +
           '<p>This interactive section of the publication includes 3D models, descriptions, and links to the online database, and complements the narrative text. Interaction with this content is essential to engaging with our interpretation of the Gabii site. Readers are encouraged both to follow the narrative laid out in the text through the model and data, and to explore the 3D content and database freely.</p>' +
-          '<p>Note: opening and closing the 3D model can cause the current location of the text to be reset to the previous section or chapter. Please make note of your current location in the navigation bar below before closing and opening the 3D model.</p>' +
+          '<p><strong>Note:</strong> opening and closing the 3D model can cause the current location of the text to be reset to the previous section or chapter. Please make note of your current location in the navigation bar below before closing and opening the 3D model.</p>' +
         '</div>' +
       '</div>';
     $panel = $($panelContent).appendTo($main);
