--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -1,4 +1,5 @@
 <div id="maincontent" class="row monograph-info-epub">
+  <!-- ADMIN TOOLS -->
   <div class="platform-admin">
     <% if can? :edit, @presenter %>
       <a href="<%= main_app.edit_hyrax_monograph_path(@presenter.id) %>" title="<%= t('monograph_catalog.index.edit_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.edit_page_button') %></a>
@@ -15,11 +16,15 @@
       <%= render_markdown @presenter.monograph_tombstone_message %>
     </div>
   <% end %>
-  <div class="col-sm-4 monograph-cover monograph-metadata">
+  <div class="col-sm-4 monograph-metadata-additional">
+    <!-- BOOK COVER -->
     <% if @presenter.tombstone_thumbnail? %>
-      <%= @presenter.tombstone_thumbnail_tag(286) %>
+      <div class="monograph-cover">
+        <%= @presenter.tombstone_thumbnail_tag(286) %>
+      </div>
     <% else %>
       <% if @presenter.representative_id.present? %>
+      <div class="monograph-cover">
         <!-- Image trigger modal -->
         <button type="button" class="btn btn-link" aria-label="Select to enlarge cover" data-toggle="modal" data-target="#modalImage">
           <%= @presenter.thumbnail_tag(286, class: "img-responsive", alt: "Cover image for #{@presenter.title}") %>
@@ -38,57 +43,66 @@
             });
           });
         </script>
+      </div>
       <% else %>
+      <div class="monograph-cover">
         <%= @presenter.thumbnail_tag(286) %>
+      </div>
       <% end %>
     <% end %>
-    
+    <!-- ALTMETRIC & DIMENSIONS BADGES -->
     <%= render 'shared/altmetric_dimensions' %>
+    <!-- PEER REVIEW -->
     <% if @presenter.peer_review? %>
-      <div><%= @presenter.peer_review.file.content.force_encoding("UTF-8").html_safe %></div>      
+      <div class="peer-review"><%= @presenter.peer_review.file.content.force_encoding("UTF-8").html_safe %></div>      
     <% end %>
-    <div class="monograph-metadata">
+    <div class="monograph-metadata-additional">
       <!-- CITABLE LINK -->
       <% unless @presenter.tombstone? %>
-            <span id="citable_link"><%= t('citable_link') %></span>
+          <div>
+            <span class="citable-link" id="citable_link"><%= t('citable_link') %></span>
             <form>
               <label for="permalink" style="display: none;"><%= t('citable_link') %></label>
               <input aria-labelledby="citable_link" type="text" class="form-control" id="permalink" aria-label="citable link" value="<%= @presenter.citable_link %>" readonly="readonly" onclick="this.select(); document.execCommand('copy');" />
             </form>
+          </div>
       <% end %>
       <!-- BAR NUMBER -->
-      <%= @presenter.attribute_to_html(:bar_number, label: t('bar_number'), html_p: true) %>
+        <div class="number">
+          <%= @presenter.attribute_to_html(:bar_number, label: t('bar_number'), html_p: true) %>
+        </div>
       <!-- PUBLICATION DATE -->
       <% if @presenter.date_created.present? %>
-        <span aria-label="publication date">Published: <%= @presenter.date_created.first %></span>
+        <div class="publication-date">
+          <span aria-label="publication date">Published: <%= @presenter.date_created.first %></span>
+        </div>
       <% end %>
       <!-- PUBLISHER -->
       <!-- COPYRIGHT YEAR -->
       <!-- COPYRIGHT HOLDER -->
       <% if @presenter.copyright_holder? %>
+      <div class="copyright-holder">
         <% if @presenter.holding_contact? %>
-          <span aria-label="copyright information and contact" class="copyright">Copyright Holder: <a href="<%= @presenter.holding_contact %>"><%= @presenter.copyright_holder %></a></span>
+          <span aria-label="copyright information and contact" class="copyright-link">Copyright Holder: <a href="<%= @presenter.holding_contact %>"><%= @presenter.copyright_holder %></a></span>
         <% else %>
-          <span aria-label="copyright information" class="copyright">Copyright Holder: <%= @presenter.copyright_holder %></span>
+          <span aria-label="copyright information" class="copyright-nolink">Copyright Holder: <%= @presenter.copyright_holder %></span>
         <% end %>
+      </div>
       <% end %>
       <!-- LICENSE -->
       <% if @presenter.license? %>
+      <div>
         <span class="license">License: <a aria-label="<%= @presenter.license_alt_text %>" rel="license" href="<%= @presenter.license.first %>" target="_blank"><%= @presenter.license_link_content %></a></span>
+      </div>
       <% end %>
       <!-- ISBN -->
       <%= @presenter.attribute_to_html(:isbn, label: t('isbn'), html_p: true) %>
       <!-- SUBJECT -->
       <!-- SERIES -->
-
-      <div class="additional-metadata">
+      <div class="subject-series">
         <dl>
-          <%= @presenter.attribute_to_html(:series, html_dl: true, heading: 3) %>
-         
-          
-          <%= @presenter.attribute_to_html(:subject, html_dl: true, heading: 3, render_as: :catalog_facet_attribute, subdomain: @presenter.subdomain) %>
-
-          
+          <%= @presenter.attribute_to_html(:series, html_dl: true, heading: 3, render_as: :catalog_facet_attribute, subdomain: @presenter.subdomain) %>
+          <%= @presenter.attribute_to_html(:subject, html_dl: true, heading: 3, render_as: :catalog_facet_attribute, subdomain: @presenter.subdomain) %>          
         </dl>
       </div>
     </div>
@@ -106,6 +120,21 @@
     <% end %>
     <!-- ACCESS INDICATORS and OPTIONS -->
     <%= render partial: 'access_options.html.erb', locals: { auth: @auth, presenter: @presenter } if @auth.present? %>      
+    <!-- PREVIOUS/NEXT EDITION MESSAGE -->
+    <% if @presenter.previous_edition_url.present? || @presenter.next_edition_url.present? %>
+      <div class="edition-links">
+      <% if @presenter.previous_edition_url.present? %>
+        <div class="edition-link">
+          <a href="<%= @presenter.previous_edition_url %>" title="<%= t('monograph_catalog.index.previous_edition', title: @presenter.title) %>" aria-label="<%= t('monograph_catalog.index.previous_edition', title: @presenter.title) %>" data-turbolinks="false"><%= t('monograph_catalog.index.previous_edition_html', title: @presenter.title) %></a>
+        </div>
+      <% end %>
+      <% if @presenter.next_edition_url.present? %>
+        <div class="edition-link">
+          <a href="<%= @presenter.next_edition_url %>" title="<%= t('monograph_catalog.index.next_edition', title: @presenter.title) %>" aria-label="<%= t('monograph_catalog.index.next_edition', title: @presenter.title) %>" data-turbolinks="false"><%= t('monograph_catalog.index.next_edition_html', title: @presenter.title) %></a>
+        </div>
+      <% end %>
+      </div>
+    <% end %>
     <!-- READ, DOWNLOAD, BUY BUTTONS -->
     <%# ensure all of the toolbar's internal components' conditionals are present here to control the toolbar's appearance %>
     <% if @presenter.reader_ebook? || (@ebook_download_presenter.downloadable_ebooks? && !@presenter.tombstone?) || @presenter.buy_url? %>
@@ -161,6 +190,7 @@
     <% end %>
     
     <!-- BOOK INFORMATION TABS - TABS -->
+    <!-- See app/assets/javascripts/application/tabs.js -->
     <div id="tabs">
     <ul class="nav nav-tabs" role="tablist">
       <% if @presenter.description? %>
@@ -215,7 +245,7 @@
       <% end %>
     </ul>
     <!-- BOOK INFORMATION TABS - CONTENT -->
-    <div id="tabs-content" class="tab-content monograph-assets-toc-epub-content" aria-live="polite">
+    <div id="tabs-content" class="tab-content monograph-info-content" aria-live="polite">
       
       <!-- OVERVIEW/BOOK DESCRIPTION -->
       <% if @presenter.description? %>
@@ -239,7 +269,7 @@
       <% if @presenter.funder_display? %>
         <section id="funder" class="tab-pane fade funder row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-funder" tabindex="0">
           <div class="col-sm-12">
-            <span aria-label="funder display" class="funder_display"><i><%= @presenter.funder_display %></i></span>
+            <div aria-label="funder display" class="funder_display"><%= @presenter.funder_display %></div>
           </div>
         </section>
       <% end %>    
@@ -281,20 +311,8 @@
   </div>
   
     
-    <% if @presenter.previous_edition_url.present? || @presenter.next_edition_url.present? %>
-      <div class="edition-links">
-      <% if @presenter.previous_edition_url.present? %>
-        <div class="edition-link">
-          <a href="<%= @presenter.previous_edition_url %>" title="<%= t('monograph_catalog.index.previous_edition', title: @presenter.title) %>" aria-label="<%= t('monograph_catalog.index.previous_edition', title: @presenter.title) %>" data-turbolinks="false"><%= t('monograph_catalog.index.previous_edition_html', title: @presenter.title) %></a>
-        </div>
-      <% end %>
-      <% if @presenter.next_edition_url.present? %>
-        <div class="edition-link">
-          <a href="<%= @presenter.next_edition_url %>" title="<%= t('monograph_catalog.index.next_edition', title: @presenter.title) %>" aria-label="<%= t('monograph_catalog.index.next_edition', title: @presenter.title) %>" data-turbolinks="false"><%= t('monograph_catalog.index.next_edition_html', title: @presenter.title) %></a>
-        </div>
-      <% end %>
-      </div>
-    <% end %>
+
+    <!-- WEBGL COMPATIBILITY MESSAGE -->
     <% if @presenter.webgl? %>
       <div id="webgl-message"></div>
     <% end %>
@@ -302,63 +320,25 @@
   </div><!-- /.monograph-metadata -->
 </div><!-- /.monograph-info-epub -->
 
-<!-- See app/assets/javascripts/application/tabs.js -->
-<div class="row monograph-assets-toc-epub">
-  <div class="col-sm-12" id="tabs-resources">
-    <ul class="nav nav-tabs" role="tablist">
-      <% if @presenter.assets? %>
-        <li role="presentation">
-          <h2>
-            <a id="tab-resources" href="#resources" aria-controls="resources" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Resources</a>
-          </h2>
-        </li>
-      <% end %>
-     
-      <% if @presenter.webgl? %>
-        <li role="presentation">
-          <h2>
-            <a id="tab-webgl" href="#webgl" aria-controls="webgl" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">3-D Model</a>
-          </h2>
-        </li>
-      <% end %>
-      <% if @presenter.database? %>
-        <li role="presentation">
-          <h2>
-            <a id="tab-database" href="#database" aria-controls="database" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Database</a>
-          </h2>
-        </li>
-      <% end %>
-      <% if @presenter.aboutware? %>
-        <li role="presentation">
-          <h2>
-            <a id="tab-aboutware" href="#aboutware" aria-controls="aboutware" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">About</a>
-          </h2>
-        </li>
-      <% end %>
-      <%# HELIO-4115 - deactivate stats tabs but keep the code around as inspiration for the next solution %>
-      <% if false %>
-        <li role="presentation">
-          <h2>
-            <a id="tab-stats" href="#stats" aria-controls="stats" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Stats</a>
-          </h2>
-        </li>
-      <% end %>
-    </ul>
-    <div id="tabs-content" class="tab-content monograph-assets-toc-epub-content" aria-live="polite">
-     
-      <% if @presenter.assets? %>
-        <section id="resources" class="tab-pane fade resources row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-resources" tabindex="0">
-          <div class="col-sm-3 fulcrum_sidebar">
-            <%= render 'catalog/search_sidebar' %>
-          </div>
-          <div class="col-sm-9">
-            <div class="content">
-              <%= render 'catalog/search_results' %>
-            </div><!-- /.content -->
-          </div>
-        </section>
-      <% end %>
-      <% if @presenter.webgl? %>
+<!-- RESOURCES -->
+<% if @presenter.assets? %>
+  <div class="row monograph-assets-toc-epub">
+    <div class="col-sm-12">
+      <h2>Resources</h2>
+      <section id="resources" class="monograph-assets-toc-epub-content resources row">
+        <div class="col-sm-3 fulcrum_sidebar">
+          <%= render 'catalog/search_sidebar' %>
+        </div>
+        <div class="col-sm-9">
+          <div id="resources" class="content">
+            <%= render 'catalog/search_results' %>
+          </div><!-- /.content -->
+        </div>
+      </section>
+    </div>
+  </div><!-- /.monograph-assets-toc-epub -->
+<% end %>
+<% if @presenter.webgl? %>
         <section id="webgl" class="tab-pane fade webgl row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-webgl" tabindex="0">
           <div class="col-sm-12">
             <%= render 'webgls/tab' %>
@@ -372,21 +352,3 @@
           </div>
         </section>
       <% end %>
-      <% if @presenter.aboutware? %>
-        <section id="aboutware" class="tab-pane fade aboutware row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-aboutware" tabindex="0">
-          <div class="col-sm-12">
-            <%# this assumes that the "aboutware" FileSet is an html doc %>
-            <%= @presenter.aboutware.file.content.force_encoding("UTF-8").html_safe %>
-          </div>
-        </section>
-      <% end %>
-   
-      <%# HELIO-4115 - deactivate stats tabs but keep the code around as inspiration for the next solution %>
-      <% if false %>
-        <section id="stats" class="tab-pane fade stats row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-stats" tabindex="0">
-          <%= render 'stats' %>
-        </section>
-      <% end %>
-    </div>
-  </div>
-</div><!-- /.monograph-assets-toc-epub -->
