--- a/app/views/layouts/embedded.html.erb
+++ b/app/views/layouts/embedded.html.erb
@@ -23,6 +23,8 @@
 
     <!-- hotjar -->
     <%= render 'shared/hotjar' %>
+    <!-- GA4 -->
+    <%= render 'shared/ga4' %>
 
     <% if content_for?(:head) %>
       <%= yield(:head) %>
