--- a/app/views/layouts/mozilla-pdf-viewer.html.erb
+++ b/app/views/layouts/mozilla-pdf-viewer.html.erb
@@ -24,6 +24,8 @@
 
     <!-- hotjar -->
     <%= render 'shared/hotjar' %>
+    <!-- GA4 -->
+    <%= render 'shared/ga4' %>
   </head>
   <body id="outerContainer">
     <%= content_for?(:body) ? yield(:body) : yield %>
