--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -43,6 +43,8 @@
 
     <!-- hotjar -->
     <%= render 'shared/hotjar' %>
+    <!-- GA4 -->
+    <%= render 'shared/ga4' %>
 
     <%# See comments in HELIO-3046. While working on HELIO-3162 this seemed to help system spec behavior locally %>
     <% if Rails.env.test? %>
