Update to Hyrax 3
----------------------------------------------------------------------

Hyrax 3.0.2

* Field label “Abstract or Summary” has been changed to “Description”

* License on the monograph “show” page has moved

* Hyrax::Actors::TransactionalRequest, Hyrax::Actors::TransferRequestActor, and Hyrax::Actors::InitializeWorkflowActor are now gone.

* object.original_file.present? not working in an odd edge case spec mock.
!object.original_file.nil? is fine though.

* Can't modify frozen string derivatives path in download controller override

* Heliotrope doesn't use Workflow. Don't throw a WorkflowAuthorizationException
if a FileSet has no parent in the FileSet controller. We handle that in other
ways (orphaned FileSet logic from long ago)

* New default work fields: alternative_title, abstract, access_right, rights_notes
Suppressing these in the work and batch upload forms

* Creating a work now creates 5 objects:

Monograph
Hydra::AccessControl
Hydra::AccessControls::Permission
Hydra::AccessControls::Embargo
Hydra::AccessControls::Lease

when it used to create 3

Monograph
Hydra::AccessControl
Hydra::AccessControls::Permission

* Hyrax::Actors::CleanupFileSetsActor.cleanup_file_sets override needs to
account for leases and embargos. We do not want orphan leases and embargos
after deleting a work.

* Lease and Embargo objects need to be accounted for in services/restful_fedora/service

Hyrax 3.1

* Blacklight::Exceptions::RecordNotFound: and ActionView::Template::Error:

models/ability_spec and views/monograph_catalog/index.html.erb_spec had
a couple of failures of the kind:

- The solr permissions search handler didn't return anything for id "my_id"

from blacklight-access-controls.

For the Ability, I think we were incorrectly adding abilities to Presenters based
on role that were only for seeing buttons/links on the monograph_catalog page.
These seem to no longer be neccesary. Removed and the buttons are fine.

For the template, we now commit the solr do

--- a/app/views/hyrax/monographs/_attribute_rows.html.erb
+++ b/app/views/hyrax/monographs/_attribute_rows.html.erb
@@ -19,3 +19,4 @@
 <%= presenter.attribute_to_html(:doi) %>
 <%= presenter.attribute_to_html(:hdl) %>
 <%= presenter.attribute_to_html(:identifier) %>
+<%= presenter.attribute_to_html(:license, render_as: :license, html_dl: true) %>
